--- a/shopier/composer.json
+++ b/shopier/composer.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=7.2",
-		"codeigniter4/framework": "^4"
+		"codeigniter4/framework": "^4",
+		"erkineren/shopier": "^0.2.1"
 	},
 	"require-dev": {
 		"fzaninotto/faker": "^1.9@dev",
